smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/space-after-metadata-unquoted.smithy
// Parse error at line 3, column 9 near `foo`: Expected one or more spaces | Model
$version: "2.0"
metadatafoo"="bar"
